@startuml
skinparam classAttributeIconSize 0
hide circle
hide attributes
show methods

package "UserStory01 — Create User (Clean)" {
  class AdminCreateUserPage <<boundary>> {
    +handle(): void
    +showForm(prefill?, message?, error?): void
    +submit(data): void
  }

  class UsersController <<control>> {
    +createUser(data: array): Result
    -validate(data: array): string?
  }

  class User <<entity>> {
    +emailExists(email: string): bool
    +createAccount(data: array): int
  }

  AdminCreateUserPage --> UsersController : submit()
  UsersController ..> User : emailExists(), createAccount()
}
@enduml
